Improved response messages with mapped json and clean up leftovers, fixed update check on books